<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mvp.views.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="enterAlways|scroll"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_avatar"
                    android:layout_width="@dimen/toolbar_img_w_h"
                    android:layout_height="@dimen/toolbar_img_w_h"
                    android:layout_marginEnd="@dimen/toolbar_img_m_e"
                    android:contentDescription="@string/profile_img"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/ic_user" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/iv_avatar"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/home"
                    android:textAppearance="@android:style/TextAppearance.Large"
                    android:textColor="@color/text_dark" />
            </RelativeLayout>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_gray"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <!-- This parent contains the impl to be hidden mostly including
     progressBar and the error message -->
    <RelativeLayout
        android:id="@+id/rl_hide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/tv_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/roboto_italic"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:visibility="gone"
            tools:text="@string/no_tweets" />

        <me.zhanghai.android.materialprogressbar.MaterialProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />
    </RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_new_tweet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_m"
        app:backgroundTint="@color/theme_blue"
        android:src="@mipmap/ic_fab_tweet"
        app:layout_anchorGravity="bottom|end" />
</android.support.design.widget.CoordinatorLayout>